<resources>
    <string name="app_name">SVVV</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="phone_no">Phone No.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

</resources>
